:ambulance: fix(service):修复 GitWeeklyReportService 中的 URL 构造问题
- 使用 URI.create 方法替代直接构造 URL 对象以提高安全性
- 避免潜在的 MalformedURLException 异常
- 确保 API 请求地址格式正确性校验